[gd_scene load_steps=17 format=2]

[ext_resource path="res://Media/FixedDays Font/new_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://GameSrc/Universal/Scene/Bootstrap/GameInit/Manager.gd" type="Script" id=2]
[ext_resource path="res://GameSrc/Universal/Scene/Bootstrap/Advanced Options.gd" type="Script" id=3]
[ext_resource path="res://Media/GUI/Titlescreen/Title.png" type="Texture" id=4]
[ext_resource path="res://Media/temp/Neon_Default.tres" type="StyleBox" id=5]
[ext_resource path="res://Media/temp/Neon_Hover.tres" type="StyleBox" id=6]
[ext_resource path="res://Media/temp/BootMenue_Neon_Button.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.701961, 0.152941, 0.807843, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.592157, 0.137255, 0.835294, 1 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.894118, 0.0941176, 0.941176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.592157, 0.427451, 0.639216, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.152941, 0.807843, 0.180392, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.239216, 0.835294, 0.137255, 1 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.14902, 0.168627, 0.14902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.941176, 0.0941176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.427451, 0.639216, 0.427451, 0.6 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.172549, 0.176471, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.803922, 0.807843, 0.152941, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.717647, 0.835294, 0.137255, 1 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.172549, 0.176471, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.847059, 0.941176, 0.0941176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.596078, 0.639216, 0.427451, 0.6 )
shadow_size = 3

[sub_resource type="DynamicFont" id=9]
size = 30
outline_size = 3
outline_color = Color( 0.172549, 0.203922, 0.286275, 1 )
font_data = ExtResource( 1 )

[node name="Node" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1128.0
margin_bottom = 632.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1081.0
margin_bottom = 403.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="default" type="Button" parent="."]
margin_left = 512.0
margin_top = 72.0
margin_right = 742.0
margin_bottom = 112.0
custom_styles/hover = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.929412, 1, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.972549, 1, 1 )
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="default2" type="Button" parent="."]
margin_left = 776.0
margin_top = 72.0
margin_right = 1006.0
margin_bottom = 112.0
custom_styles/hover = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.929412, 1, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.972549, 1, 1 )
text = "START CONTENT CREATOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="advanced" type="Button" parent="."]
margin_left = 32.0
margin_top = 184.0
margin_right = 262.0
margin_bottom = 224.0
custom_styles/hover = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.929412, 1, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.972549, 1, 1 )
text = "ADVANCED OPTIONS"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsPanel" type="Control" parent="."]
visible = false
margin_left = 16.0
margin_top = 296.0
margin_right = 240.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="form" type="Control" parent="optionsPanel"]
margin_left = -56.0
margin_top = -304.0
margin_right = -16.0
margin_bottom = -264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kitsToStart" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.254902, 1, 1 )
custom_colors/font_color_hover = Color( 0.952941, 0.721569, 1, 1 )
text = "STARTING KITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bootMode" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "MODE TO BOOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="communityContent" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = 96.0
margin_right = 216.0
margin_bottom = 136.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.960784, 1, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.972549, 1, 0.721569, 1 )
text = "USER CONTENT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event" type="Button" parent="optionsPanel"]
visible = false
margin_left = 16.0
margin_top = 152.0
margin_right = 208.0
margin_bottom = 192.0
text = "WIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event Info" type="RichTextLabel" parent="."]
margin_left = 584.0
margin_top = 328.0
margin_right = 992.0
margin_bottom = 488.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "EVENT: 
player-generatet content
(theme)
On 01.06.21"
text = "EVENT: 
player-generatet content
(theme)
On 01.06.21"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="default2" to="." method="_on_DioJSONes_pressed"]
[connection signal="pressed" from="advanced" to="advanced" method="_on_pressed"]
[connection signal="pressed" from="optionsPanel/kitsToStart" to="." method="_on_kitsToStart_pressed"]
[connection signal="pressed" from="optionsPanel/bootMode" to="." method="_on_bootMode_pressed"]
[connection signal="pressed" from="optionsPanel/communityContent" to="." method="_on_communityContent_pressed"]
[connection signal="pressed" from="optionsPanel/Event" to="." method="_on_Event_pressed"]
